--- a/template/dl.html
+++ b/template/dl.html
@@ -33,7 +33,7 @@
     </div>
     
     <footer>
-	    <align="left"><a href="tg://resolve?domain=File_to_link_rs_bot" style="color:blue" >Make your own Link &emsp; &emsp;</a></align>
+	    <align="left"><a href="tg://resolve?domain=Knmlpro2" style="color:blue" >Make your own Link &emsp; &emsp;</a></align>
         <span id="fork-text">Fork me on</span>
         <span>
             <a href="githun" id='github-logo'>
